Details page finished. Integration with travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
 deploy:
   provider: pages
   edge: true
-  skip-cleanuo: true
+  skip-cleanup: true
   keep-history: true
   github-token: $GITHUB_TOKEN
   local-dir: dist/
